change default query '.' and remove sample input/output

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<small>Your query:</small>
 				</div>
 				<div class="col-md-11">
-					<textarea data-autoresize class="form-control" id="query" autofocus>.[1]</textarea>
+					<textarea data-autoresize class="form-control" id="query" autofocus>.</textarea>
 					<small>
 						<span id="error"></span>
 					</small>
@@ -65,37 +65,8 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<small>Input JSON <small>(sample data from <a href="https://jsonplaceholder.typicode.com/" target="_blank">JSONPlaceholder</a>):</small></small>
-					<div id="input" style="height: 65vh;">[
-  {
-	"postId": 1,
-	"id": 4,
-	"name": "alias odio sit",
-	"email": "Lew@alysha.tv",
-	"body": "non et atque\noccaecati deserunt quas accusantium unde odit nobis qui voluptatem\nquia voluptas consequuntur itaque dolor\net qui rerum deleniti ut occaecati"
-  },
-  {
-	"postId": 1,
-	"id": 5,
-	"name": "vero eaque aliquid doloribus et culpa",
-	"email": "Hayden@althea.biz",
-	"body": "harum non quasi et ratione\ntempore iure ex voluptates in ratione\nharum architecto fugit inventore cupiditate\nvoluptates magni quo et"
-  },
-  {
-	"postId": 2,
-	"id": 6,
-	"name": "et fugit eligendi deleniti quidem qui sint nihil autem",
-	"email": "Presley.Mueller@myrl.com",
-	"body": "doloribus at sed quis culpa deserunt consectetur qui praesentium\naccusamus fugiat dicta\nvoluptatem rerum ut voluptate autem\nvoluptatem repellendus aspernatur dolorem in"
-  },
-  {
-	"postId": 2,
-	"id": 7,
-	"name": "repellat consequatur praesentium vel minus molestias voluptatum",
-	"email": "Dallas@ole.me",
-	"body": "maiores sed dolores similique labore et inventore et\nquasi temporibus esse sunt id et\neos voluptatem aliquam\naliquid ratione corporis molestiae mollitia quia et magnam dolor"
-  }
-]</div>
+					<small>Input JSON</small>
+					<div id="input" style="height: 65vh;"></div>
 				</div>
 				<div class="col-md-6">
 					<div class="row small">
@@ -116,13 +87,7 @@
 							<label for="jq-options-sort">Sort Keys</label>
 						</div>
 					</div>
-					<div id="output" style="height: 65vh;">{
-  "postId": 1,
-  "id": 5,
-  "name": "vero eaque aliquid doloribus et culpa",
-  "email": "Hayden@althea.biz",
-  "body": "harum non quasi et ratione\ntempore iure ex voluptates in ratione\nharum architecto fugit inventore cupiditate\nvoluptates magni quo et"
-}</div>
+					<div id="output" style="height: 65vh;"></div>
 				</div>
 			</div>
 
