--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<small>Input JSON</small>
+					Input JSON  <button id="btnPretty" type="button" value="Pretty" class="btn-small btn-outline-secondary">Pretty</button>
 					<div id="input" style="height: 65vh;"></div>
 				</div>
 				<div class="col-md-6">
-					<div class="row small">
+					<div class="row">
 						<div class="col-md-3">
 							Output JSON:
 						</div>
@@ -199,6 +199,7 @@
 		{
 			// Launch jq when click button
 			document.getElementById("btnRun").addEventListener("click", launch);
+			document.getElementById("btnPretty").addEventListener("click", pretty);
 
 			// Auto-resizing input textarea (https://stephanwagner.me/auto-resizing-textarea-with-vanilla-javascript)
 			document.querySelectorAll("[data-autoresize]").forEach(function (element) {
