--- a/index.html
+++ b/index.html
@@ -16,26 +16,18 @@
 		</style>
 	</head>
 	<body>
-		<nav class="navbar navbar-dark bg-warning fixed-top mt-0" style="padding-top: 2px;">
-			<div class="text-center text-dark small w-100">
-				Check out sandbox.bio's jq playground at <a href="https://sandbox.bio/playgrounds?id=jq">sandbox.bio/playgrounds?id=jq</a>
-			</div>
-		</nav>
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top mt-4">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top mt-0">
 			<div class="navbar-brand">
 				<strong>jq kung fu</strong>
 				<small class="ml-3 text-light">
 					A jq playground built with WebAssembly
 				</small>
 			</div>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
 
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto"></ul>
 				<div>
-					<a style="color:#ccc" class="nav-link" href="https://github.com/robertaboukhalil/jqkungfu" target="_blank">Code on GitHub</a>
+					<a style="color:#ccc"  href="https://github.com/jaywgraves/jqkungfu" target="_blank">GitHub</a> - <a style="color:#ccc" href="https://github.com/robertaboukhalil/jqkungfu" target="_blank">(Forked from)</a>
 				</div>
 			</div>
 		</nav>
@@ -94,8 +86,6 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<hr />
-					<!-- <br /> -->
-					<p>Want to learn how to build WebAssembly applications like this one? Check out my book <a href="http://levelupwasm.com" target="_blank">Level Up with WebAssembly</a>.</p>
 				</div>
 			</div>
 		</main>
